Fix horizontal scrolling issue

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -275,3 +275,10 @@ color:white;
 text-decoration:none;
 }
 
+
+html,
+body{
+    width:100%;
+    max-width:100%;
+    overflow-x:hidden !important;
+}
